--- a/小組作業1.md
+++ b/小組作業1.md
@@ -1,11 +1,11 @@
 # 小組作業 1
 
 ## 組員名單
-- 組長： 
-- 組員： 許筑翕、辜雅雯、陳宥蓁
+- 組長： 陳宥蓁
+- 組員： 許筑翕、辜雅雯
 
 ##  專題題目
-*尚未定案*
+基於影像辨識的校園垃圾分類輔助系統
 
 ## 專題內容
-*尚未定案*
+垃圾影像辨識：使用者上傳垃圾照片，系統利用影像辨識技術判斷垃圾類別（如可回收、廚餘、一般垃圾）。
