--- a/小組作業1.md
+++ b/小組作業1.md
@@ -8,12 +8,12 @@
 基於影像辨識的健身動作系統
 
 ## 專題內容
-1. 動作辨識
+### 1. 動作辨識
 + 透過手機相機辨識常見動作（如深蹲、平板撐），計算正確率並顯示分數。包含簡單教學影片。
-2. 分析與報告功能
+### 2. 分析與報告功能
 + 運動表現趨勢分析
 + 動作改善追蹤
 + 統計圖表和報告生成
-3. 延伸 API 串接應用
+### 3. 延伸 API 串接應用
 + 提供個人化健身建議（透過 ChatGPT API 或 Gemini API 做健身教練問答）。
 
