--- a/小組作業2.md
+++ b/小組作業2.md
@@ -2,6 +2,13 @@
  
 ## 1.組員任務
 
+| 組員   | 角色 | 主要任務                                                                 | 預估時間 | 相關模組                     |
+|--------|------|--------------------------------------------------------------------------|----------|------------------------------|
+| 陳宥蓁 | 組長 | - 延伸 API 串接：整合 ChatGPT 或 Gemini API。<br>- 動作辨識模組：手機相機整合與正確率計算邏輯。<br>- 測試與整合全系統。<br>- 撰寫最終報告。 | 4-6 週   | 動作辨識、API 串接           |
+| 許筑翕 | 組員 | - 動作改善追蹤功能開發（追蹤用戶動作趨勢）。<br>- 分析與報告功能：統計圖表生成（Matplotlib 或 Chart.js）。<br>- 教學影片嵌入（HTML5 播放器）。 | 3-5 週   | 分析與報告                   |
+| 辜雅雯 | 組員 |  - 整體專案協調與 GitHub 管理（commit、branch、pull request）。 <br>- 動作辨識模組：影像辨識模型訓練（OpenCV 或 MediaPipe）。<br>- 運動表現趨勢分析（資料儲存與視覺化）。 | 4-6 週   | 動作辨識、分析與報告 |
+
+**注意**：所有組員需參與 code review 與 debugging。GitHub 儲存庫將設定 milestones 追蹤任務進度。
 ## 2.甘特圖
 
 ## 3.PERT/CPM圖
