--- a/小組作業2.md
+++ b/小組作業2.md
@@ -9,5 +9,27 @@
 | 辜雅雯 | 組員 |  - 整體專案協調與 GitHub 管理（commit、branch、pull request）。 <br>- 動作辨識模組：影像辨識模型訓練（OpenCV 或 MediaPipe）。<br>- 運動表現趨勢分析（資料儲存與視覺化）。 | 4-6 週   | 動作辨識、分析與報告 |
 
 ## 2.甘特圖
+## 甘特圖
+
+以下為專案時程（2025/9/1 至 2025/11/30，約 12 週）。
+
+```mermaid
+gantt
+    title 基於影像辨識的健身動作系統 - 專案甘特圖
+    dateFormat  YYYY-MM-DD
+    axisFormat  %m/%d
+    section 啟動與需求分析
+    研擬計畫    :init, 2025-09-01, 7d
+    需求分析 :req, after init, 14d
+    section 設計階段
+    設計階段          :design, after req, 14d
+    section 實作階段
+    實作階段        :impl, after design, 21d
+    section 測試階段
+    系統測試               :test, after impl, 14d
+    section 部署階段
+    使用者測試            :deploy, after test, 7d
+```
+
 
 ## 3.PERT/CPM圖
