--- a/小組作業2.md
+++ b/小組作業2.md
@@ -10,24 +10,26 @@
 
 ## 2.甘特圖
 
-專案時程（2025/10/01 至 2025/12/21，約 12 週）。
+專案時程（2025/10/01 至 2026/01/17，約 14 週）。
 
 ```mermaid
 gantt
-    title 基於影像辨識的健身動作系統 - 專案甘特圖
+    title 項目計劃
     dateFormat  YYYY-MM-DD
-    axisFormat  %m/%d
-    section 啟動與需求分析
-    研擬計畫    :init, 2025-10-01, 10d
-    需求分析 :req, after init, 11d
-    section 設計階段
-    設計階段          :design, after req, 14d
-    section 實作階段
-    實作階段        :impl, after design, 28d
+    section 開發階段
+    研擬計畫         :2025-10-01, 1d
+    需求分析         :2025-10-02, 2d
+    設計階段         :2025-10-04, 28d
+    影像辨識         :2025-11-01, 21d
+    實作階段         :2025-11-15, 14d
+    section API整合
+    API整合         :2025-11-29, 14d
     section 測試階段
-    系統測試               :test, after impl, 14d
-    section 部署階段
-    使用者測試            :deploy, after test, 5d
+    系統測試           :2025-12-13, 28d
+    使用者測試         :2026-01-10, 7d
+    
+
+
 
 ```
 
