--- a/小組作業2.md
+++ b/小組作業2.md
@@ -16,21 +16,34 @@
 gantt
     title 項目計劃
     dateFormat  YYYY-MM-DD
+    section 啟動與分析
+    研擬計畫         :2025-10-01, 5d
+    需求分析         :2025-10-06, 7d
     section 開發階段
-    研擬計畫         :2025-10-01, 1d
-    需求分析         :2025-10-02, 2d
-    設計階段         :2025-10-04, 28d
-    影像辨識         :2025-11-01, 21d
-    實作階段         :2025-11-15, 14d
-    section API整合
-    API整合         :2025-11-29, 14d
+    設計階段         :2025-10-13, 15d
+    影像辨識         :2025-10-13, 15d
+    section 實作階段
+    實作階段         :2025-10-28, 15d
+    API整合         :2025-11-13, 14d
     section 測試階段
-    系統測試           :2025-12-13, 4d
+    系統測試           :2025-11-27, 20d
     使用者測試         :2025-12-17, 4d
     
 
+```
 
-
+```mermaid
+graph LR
+    A[專題啟動<br>10/1] --> B[研擬計畫<br>10/1~10/5]
+    B --> C[需求分析<br>10/6~10/12]
+    C --> D[設計階段<br>10/13~10/27]
+    C --> E[影像辨識<br>10/13~10/27]
+    D --> F[實作階段<br>10/28~11/11]
+    E --> F
+    F --> G[API整合<br>11/29~12/12]
+    G --> H[系統測試<br>12/13~12/16]
+    H --> I[使用者測試<br>12/17~12/21]
+    I --> J[專題完成]
 ```
 
 ## 3.PERT/CPM圖
