--- a/小組作業2.md
+++ b/小組作業2.md
@@ -34,16 +34,18 @@ gantt
 
 ```mermaid
 graph LR
-    A[專題啟動<br>10/1] --> B[研擬計畫<br>10/1~10/5]
-    B --> C[需求分析<br>10/6~10/12]
-    C --> D[設計階段<br>10/13~10/27]
-    C --> E[影像辨識<br>10/13~10/27]
-    D --> F[實作階段<br>10/28~11/11]
-    E --> F
-    F --> G[API整合<br>11/29~12/12]
-    G --> H[系統測試<br>12/13~12/16]
-    H --> I[使用者測試<br>12/17~12/21]
-    I --> J[專題完成]
+    A1[1. 專題啟動<br>開始:10/01<br>結束:10/01<br>需時:1天] --> B2[2. 研擬計畫<br>開始:10/01<br>結束:10/05<br>需時:5天]
+    B2 --> C3[3. 需求分析<br>開始:10/06<br>結束:10/12<br>需時:7天]
+    C3 --> D4[4. 設計階段<br>開始:10/13<br>結束:10/27<br>需時:15天]
+    C3 --> E5[5. 影像辨識<br>開始:10/13<br>結束:10/27<br>需時:15天]
+    D4 --> F6[6. 實作階段<br>開始:10/28<br>結束:11/11<br>需時:15天]
+    E5 --> F6
+    F6 --> G7[7. API整合<br>開始:11/29<br>結束:12/12<br>需時:14天]
+    G7 --> H8[8. 系統測試<br>開始:12/13<br>結束:12/16<br>需時:4天]
+    H8 --> I9[9. 使用者測試<br>開始:12/17<br>結束:12/21<br>需時:5天]
+    I9 --> J10[10. 專題完成]
+
+
 ```
 
 ## 3.PERT/CPM圖
