--- a/小組作業2.md
+++ b/小組作業2.md
@@ -34,16 +34,16 @@ gantt
 
 ```mermaid
 graph LR
-    A1[1. 專題啟動<br>開始:10/01<br>結束:10/01<br>需時:1天] --> B2[2. 研擬計畫<br>開始:10/01<br>結束:10/05<br>需時:5天]
-    B2 --> C3[3. 需求分析<br>開始:10/06<br>結束:10/12<br>需時:7天]
-    C3 --> D4[4. 設計階段<br>開始:10/13<br>結束:10/27<br>需時:15天]
-    C3 --> E5[5. 影像辨識<br>開始:10/13<br>結束:10/27<br>需時:15天]
-    D4 --> F6[6. 實作階段<br>開始:10/28<br>結束:11/11<br>需時:15天]
+    A1[1. 研擬計畫 <br>開始:10/01<br>結束:10/01<br>需時:1天] --> B2[2. 需求分析<br>開始:10/01<br>結束:10/05<br>需時:5天]
+    B2 --> C3[3. 設計階段<br>開始:10/06<br>結束:10/12<br>需時:7天]
+    C3 --> D4[4. 影像辨識 <br>開始:10/13<br>結束:10/27<br>需時:15天]
+    C3 --> E5[5. 實作階段<br>開始:10/13<br>結束:10/27<br>需時:15天]
+    D4 --> F6[6. API整合<br>開始:10/28<br>結束:11/11<br>需時:15天]
     E5 --> F6
-    F6 --> G7[7. API整合<br>開始:11/29<br>結束:12/12<br>需時:14天]
-    G7 --> H8[8. 系統測試<br>開始:12/13<br>結束:12/16<br>需時:4天]
+    F6 --> G7[7. 系統測試<br>開始:11/29<br>結束:12/12<br>需時:14天]
+    G7 --> H8[8. 使用者測試<br>開始:12/13<br>結束:12/16<br>需時:4天]
     H8 --> I9[9. 使用者測試<br>開始:12/17<br>結束:12/21<br>需時:5天]
-    I9 --> J10[10. 專題完成]
+
 
 
 ```
