--- a/小組作業2.md
+++ b/小組作業2.md
@@ -44,6 +44,7 @@ graph LR
     F6 --> G7[7. 系統測試<br>開始:11/29<br>結束:12/12<br>需時:14天]
     G7 --> H8[8. 使用者測試<br>開始:12/13<br>結束:12/16<br>需時:4天]
     H8 --> I9[9. 使用者測試<br>開始:12/17<br>結束:12/21<br>需時:5天]
+    I9 --> I9[9. 使用者測試<br>開始:12/17<br>結束:3/1<br>需時:90天]
 ```
 
 ![PERT Picture](pert.png "PERT圖")
